# Multi-Agent-Algorithmic-Arena

./: .gitignore  README.md  main.py
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: problem.py
backend/tests/: test_config.py  test_health.py  test_problem_model.py
docs/: 学习协作流程.md  实施计划.md  总体设计.md
docs/决策记录/: 0001-采用混合式环境配置学习法.md
docs/学习笔记/: Python项目结构与pytest.md
